--- a/WebApi/EcisApi/appsettings.json
+++ b/WebApi/EcisApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=ecis_db;User Id=sa;Password=1234567;"
+    "DefaultConnection": "Data Source=DESKTOP-H3UKCMU;Initial Catalog=ecis_db;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Logging": {
     "LogLevel": {
