--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 /WebApi/EcisApi/obj
 /WebApi/EcisApi/obj/*
 /WebApi/EcisApi/obj/*
+/WebApp/v3-admin-vite-main/pnpm-lock.yaml
+/WebApp/v3-admin-vite-main/pnpm-lock.yaml
+/WebApi/EcisApi/obj/*
+/WebApi/.vs/*
+/WebApi/.vs/*
