--- a/WebApp/v3-admin-vite-main/package.json
+++ b/WebApp/v3-admin-vite-main/package.json
@@ -25,6 +25,7 @@
     "path-browserify": "1.0.1",
     "path-to-regexp": "6.2.1",
     "pinia": "2.1.6",
+    "pnpm": "^8.9.2",
     "screenfull": "6.0.2",
     "vue": "3.3.4",
     "vue-router": "4.2.5",
