--- a/WebApi/EcisApi/appsettings.json
+++ b/WebApi/EcisApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-H3UKCMU;Initial Catalog=ecis_db;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DefaultConnection": "Data Source=HOANGTM-PC1;Initial Catalog=ecis_db;Persist Security Info=True;User ID=sa;Password=Br@vs01"
   },
   "Logging": {
     "LogLevel": {
@@ -12,9 +12,8 @@
   "AllowedHosts": "*",
   "AppSettings": {
     "Secret": "ECIS_SECRET_TOKEN",
-    "CloudBucketName": "ecis-bucket",
-    "EmailSender": "lqaxx000@gmail.com",
-    "EmailPassword": "kszsduttlenwgntk",
+    "EmailSender": "hoangtm01223364550@gmail.com",
+    "EmailPassword": "TMH123456!",
     "SmtpServer": "smtp.gmail.com",
     "SmtpPortNumber": 587
   }
