--- a/WebApi/EcisApi/appsettings.json
+++ b/WebApi/EcisApi/appsettings.json
@@ -11,6 +11,7 @@
   },
   "AllowedHosts": "*",
   "AppSettings": {
+    "FileFolderPath": "C:\\ecis",
     "Secret": "ECIS_SECRET_TOKEN",
     "EmailSender": "hoangtm01223364550@gmail.com",
     "EmailPassword": "TMH123456!",
