--- a/WebApp/v3-admin-vite-main/package.json
+++ b/WebApp/v3-admin-vite-main/package.json
@@ -14,6 +14,11 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "2.1.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/vue-fontawesome": "^3.0.5",
     "axios": "1.5.1",
     "dayjs": "1.11.10",
     "element-plus": "2.3.14",
