--- a/WebApp/v3-admin-vite-main/.vscode/settings.json
+++ b/WebApp/v3-admin-vite-main/.vscode/settings.json
@@ -4,7 +4,7 @@
     "source.fixAll.eslint": true
   },
   "[vue]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
+    "editor.defaultFormatter": "Vue.volar"
   },
   "[javascript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
