--- a/WebApi/EcisApi/appsettings.json
+++ b/WebApi/EcisApi/appsettings.json
@@ -13,8 +13,8 @@
   "AppSettings": {
     "FileFolderPath": "C:\\ecis",
     "Secret": "ECIS_SECRET_TOKEN",
-    "EmailSender": "hoangtm01223364550@gmail.com",
-    "EmailPassword": "TMH123456!",
+    "EmailSender": "kiemlamcuc@gmail.com",
+    "EmailPassword": "ywktvyrwaufvolzw",
     "SmtpServer": "smtp.gmail.com",
     "SmtpPortNumber": 587
   }
