--- a/WebApi/EcisApi/EcisApi.csproj
+++ b/WebApi/EcisApi/EcisApi.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.0" />
     <PackageReference Include="Google.Apis.Storage.v1" Version="1.54.0.2234" />
     <PackageReference Include="Google.Cloud.Storage.V1" Version="3.5.0" />
+    <PackageReference Include="Hangfire" Version="1.8.6" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="5.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.7" />
@@ -35,6 +36,10 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.14" />
     <PackageReference Include="MimeMapping" Version="1.0.1.37" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+	<PackageReference Include="Hangfire.Core" Version="1.8.*" />
+	<PackageReference Include="Hangfire.SqlServer" Version="1.8.*" />
+	<PackageReference Include="Hangfire.AspNetCore" Version="1.8.*" />
+	<PackageReference Include="Microsoft.Data.SqlClient" Version="*" />
   </ItemGroup>
 
   <ItemGroup>
